@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.896 2008-02-13 17:10:49 castaglia Exp $
+$Id: NEWS,v 1.897 2008-02-19 16:42:58 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -121,6 +121,7 @@ CVS
 - Bug 2000 - mod_cap should not use bundled libcap.  Now if a system libcap
   is present, that system library will be used instead of the bundled libcap.
   If no system libcap is present, the bundled libcap will be used.
+- Bug 3044 - Segfault if mod_delay fails to load DelayTable.
 
 1.3.1 - Released 5-Oct-2007
 --------------------------------
